--- a/Index.html
+++ b/Index.html
@@ -2,32 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Study Vocab</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Study Vocab Flashcards & Quiz</h1>
+  <!-- Landing Section -->
+  <section id="landing">
+    <h1>Welcome to Study Vocab</h1>
+    <p>Practice words and test yourself with interactive flashcards and quizzes!</p>
+    <nav>
+      <a href="#flashcards" class="nav-btn">Flashcards</a>
+      <a href="#quiz" class="nav-btn">Quiz</a>
+    </nav>
+  </section>
 
-  <div class="card-container"></div>
-  <button id="nextCard">Next Card</button>
+  <!-- Flashcards Section -->
+  <section id="flashcards">
+    <h2>Flashcards</h2>
+    <div class="flashcard-container">
+      <div class="flashcard" id="flashcard">
+        <div class="flashcard-face flashcard-front">
+          <h3 id="word">Parcel</h3>
+        </div>
+        <div class="flashcard-face flashcard-back">
+          <p><strong>Pronunciation:</strong> per-sell</p>
+          <p><strong>Definition:</strong> a package</p>
+          <p><strong>Example:</strong> I received a parcel today.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <hr>
+  <!-- Quiz Section -->
+  <section id="quiz">
+    <h2>Quiz</h2>
+    <p>Coming soon: select number of questions and test yourself!</p>
+  </section>
 
-  <h2>Quiz</h2>
-  <p id="quizWord"></p>
-  <div class="quiz-options">
-    <button class="optionBtn"></button>
-    <button class="optionBtn"></button>
-    <button class="optionBtn"></button>
-    <button class="optionBtn"></button>
-  </div>
-  <p id="result"></p>
-  <p>Correct: <span id="correct">0</span> | Wrong: <span id="wrong">0</span></p>
-  <button id="nextQuiz">Next Question</button>
-
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
-
-
