--- a/Flashcards.html
+++ b/Flashcards.html
@@ -1,27 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Flashcards</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-<h2>Flashcards</h2>
+<a href="index.html" class="home-btn">← Home</a>
 
 <div class="flashcard-container">
-  <div class="flashcard" id="flashcard">
-    <div class="front" id="word">Eloquent</div>
-    <div class="back" id="definition">
-      <strong>/ˈeləkwənt/</strong><br><br>
-      Fluent and persuasive in speaking or writing.<br><br>
-      <em>She gave an eloquent speech.</em>
+  <div id="flashcard" class="flashcard">
+    <div class="front">
+      <h1 id="word"></h1>
+    </div>
+    <div class="back">
+      <p id="definition"></p>
     </div>
   </div>
 </div>
-
-<p class="hint">Click card to flip • Click right = next • left = previous</p>
-
-<script src="flashcards.js"></script>
-</body>
-</html>
