--- a/Flashcards.html
+++ b/Flashcards.html
@@ -1,12 +1,33 @@
-<a href="index.html" class="home-btn">← Home</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Flashcards</title>
 
-<div class="flashcard-container">
-  <div id="flashcard" class="flashcard">
-    <div class="front">
-      <h1 id="word"></h1>
-    </div>
-    <div class="back">
-      <p id="definition"></p>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Home Button -->
+  <a href="index.html" class="home-btn">← Home</a>
+
+  <!-- Flashcard Area -->
+  <div class="flashcard-container">
+    <div id="flashcard" class="flashcard">
+      <div class="front">
+        <h1 id="word"></h1>
+      </div>
+      <div class="back">
+        <p id="definition"></p>
+      </div>
     </div>
   </div>
-</div>
+
+  <!-- JS -->
+  <script src="flashcards.js"></script>
+</body>
+</html>
