--- a/Flashcards.html
+++ b/Flashcards.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Flashcards</title>
 
-  <!-- Google Font -->
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <!-- Home Button -->
-  <a href="index.html" class="home-btn">← Home</a>
+  <!-- HOME BUTTON -->
+  <a href="index.html" class="home-btn">🏠 Home</a>
 
-  <!-- Flashcard Area -->
+  <!-- FLASHCARD -->
   <div class="flashcard-container">
-    <div id="flashcard" class="flashcard">
-      <div class="front">
-        <h1 id="word"></h1>
+    <div class="flashcard" id="flashcard">
+      <div class="front" id="card-front">
+        Word
       </div>
-      <div class="back">
-        <p id="definition"></p>
+
+      <div class="back" id="card-back">
+        <!-- Filled by JS -->
       </div>
     </div>
   </div>
 
   <!-- JS -->
   <script src="flashcards.js"></script>
+
 </body>
 </html>
