--- a/Flashcards.html
+++ b/Flashcards.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Flashcards</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <nav class="top-nav">
-    <a href="index.html">← Home</a>
-  </nav>
+  <!-- homepage button EXACTLY like before -->
+  <a href="index.html" class="home-link">Home</a>
 
-  <div class="flashcard-page">
+  <!-- side click zones -->
+  <div class="side-zone left-zone"></div>
+  <div class="side-zone right-zone"></div>
 
-    <!-- LEFT SIDE CLICK AREA -->
-    <div class="side-zone left-zone"></div>
-
-    <!-- FLASHCARD -->
-    <div class="flashcard-wrapper">
-      <div class="flashcard" id="flashcard">
-        <div class="card-face card-front">
-          <h1 id="word">Word</h1>
-        </div>
-
-        <div class="card-face card-back">
-          <p id="pronunciation"></p>
-          <p id="definition"></p>
-          <p id="sentence"></p>
-        </div>
-      </div>
+  <!-- flashcard -->
+  <div class="flashcard" id="flashcard">
+    <div class="card-face front">
+      <h1 id="word"></h1>
     </div>
 
-    <!-- RIGHT SIDE CLICK AREA -->
-    <div class="side-zone right-zone"></div>
-
+    <div class="card-face back">
+      <p id="pronunciation"></p>
+      <p id="definition"></p>
+      <p id="sentence"></p>
+    </div>
   </div>
 
   <script src="flashcards.js"></script>
