--- a/Flashcards.html
+++ b/Flashcards.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 
-  <!-- homepage button EXACTLY like before -->
   <a href="index.html" class="home-link">Home</a>
 
-  <!-- side click zones -->
-  <div class="side-zone left-zone"></div>
-  <div class="side-zone right-zone"></div>
+  <!-- CLICK ZONES (DO NOT AFFECT LAYOUT) -->
+  <div id="leftZone"></div>
+  <div id="rightZone"></div>
 
-  <!-- flashcard -->
+  <!-- FLASHCARD (UNCHANGED POSITION) -->
   <div class="flashcard" id="flashcard">
     <div class="card-face front">
       <h1 id="word"></h1>
